--- a/src/components/Todoo.css
+++ b/src/components/Todoo.css
@@ -1,11 +1,11 @@
-.Todo-container{
-   background-color: black;
+/* .Todo-container{
+   background-color: rgb(224, 44, 44);
    height: 30vw;
    margin:5em auto;
    border-radius: 10px;
    padding: 15px;
-   color: aliceblue;
-}
+   color: rgb(50, 132, 203);
+} */
 
 .header {
    font-size: 2em;
@@ -17,6 +17,10 @@
    padding: 0.5em;
    border-radius: 1em;
    border: 2px solid yellow;
+   height: 30vw;
+   margin:5em auto;
+   border-radius: 10px;
+   /* padding: 15px; */
 }
 
 .input-container {
@@ -54,7 +58,7 @@
    font-size: 1.25em;
    font-weight: bold;
    font-style: italic;
-   color: yellow;
+   color: rgb(240, 240, 233);
    background-color: black;
    border: 10px solid yellow;
    border: 5px;
