--- a/src/components/Todoapp/Todoo.css
+++ b/src/components/Todoapp/Todoo.css
@@ -1,18 +1,18 @@
-/* .Todo-container{
+.Todo-container{
    background-color: rgb(224, 44, 44);
    height: 30vw;
    margin:5em auto;
    border-radius: 10px;
    padding: 15px;
    color: rgb(50, 132, 203);
-} */
+}
 
 .header {
    font-size: 2em;
    text-align: center;
 }
 
-.Todo-container {
+.input-container {
    background-color: black;
    padding: 0.5em;
    border-radius: 1em;
@@ -20,7 +20,8 @@
    height: 30vw;
    margin:5em auto;
    border-radius: 10px;
-   /* padding: 15px; */
+   padding: 15px;
+   color: white;
 }
 
 .input-container {
@@ -54,6 +55,7 @@
 }
 
 /* add tasks */
+
 .List-tasks{
    font-size: 1.25em;
    font-weight: bold;
